--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-# kucko_joy
-# Compiled class file
-*.class
+# Built application files
+*.apk
+*.ap_
+*.aab
 
-# Log file
-*.log
+# Local configuration file (sdk path, etc)
+local.properties
 
-# BlueJ files
-*.ctxt
+# Gradle files
+.gradle/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# User-specific configurations
+*.iml
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Version control
+vcs.xml
+
+# lint
+lint/intermediates/
+lint/generated/
+lint/outputs/
+lint/tmp/
+lint/reports/
