--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
-# kucko_joy
-# Compiled class file
-*.class
+# Built application files
+build/
 
-# Log file
+# Files for the ART/Dalvik VM
+*.dex
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+# Gradle files
+.gradle/
+
+# Signing files
+.signing/
+
+# User-specific configurations
+*.iml
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
 *.log
 
-# BlueJ files
-*.ctxt
+# Android Studio Navigation editor temp files
+.navigation/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Android Studio captures folder
+captures/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Keystore files
+# Uncomment the following lines if you do not want to check your keystore files in.
+*.jks
+*.keystore
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Version control
+vcs.xml
